WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146989
[Win] 64-bit Build Failure
https://bugs.webkit.org/show_bug.cgi?id=146989
Summary
[Win] 64-bit Build Failure
Brent Fulgham
Reported
2015-07-15 16:00:26 PDT
The 64-bit Windows build fails due to a missing CCallHelpers.h method.
Attachments
Patch
(1.47 KB, patch)
2015-07-15 16:02 PDT
,
Brent Fulgham
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2015-07-15 16:02:22 PDT
Created
attachment 256874
[details]
Patch
Mark Lam
Comment 2
2015-07-15 16:14:37 PDT
Comment on
attachment 256874
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=256874&action=review
r=me
> Source/JavaScriptCore/jit/CCallHelpers.h:1537 > +#if OS(WINDOWS) && CPU(X86_64)
I think this #if is not needed because this function is always valid for the NUMBER_OF_ARGUMENT_REGISTERS == 4 case. However, since this function seems to only be needed by Windows for now, I’m ok with leaving the #if in.
Saam Barati
Comment 3
2015-07-15 16:36:14 PDT
(In reply to
comment #0
)
> The 64-bit Windows build fails due to a missing CCallHelpers.h method.
Thanks Brent.
Brent Fulgham
Comment 4
2015-07-15 17:31:32 PDT
Comment on
attachment 256874
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=256874&action=review
>> Source/JavaScriptCore/jit/CCallHelpers.h:1537 >> +#if OS(WINDOWS) && CPU(X86_64) > > I think this #if is not needed because this function is always valid for the NUMBER_OF_ARGUMENT_REGISTERS == 4 case. However, since this function seems to only be needed by Windows for now, I’m ok with leaving the #if in.
OK. I'll remove it while landing.
Brent Fulgham
Comment 5
2015-07-15 17:32:28 PDT
Committed
r186876
: <
http://trac.webkit.org/changeset/186876
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug