[Win] 64-bit Build Failure https://bugs.webkit.org/show_bug.cgi?id=146989

Reviewed by Mark Lam.

* jit/CCallHelpers.h:
(JSC::CCallHelpers::setupArgumentsWithExecState): Add missing
declaration for 64-bit type on 4-argument register machines (like
Windows).


Canonical link: https://commits.webkit.org/165044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186876 268f45cc-cd09-0410-ab3c-d52691b4dbfc